--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Modbus
+name=ArduinoModbus
 version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=
 paragraph=
 category=Communication
-url=http://www.arduino.cc/en/Reference/Modbus
+url=http://www.arduino.cc/en/Reference/ArduinoModbus
 architectures=*
-includes=Modbus.h
+includes=ArduinoModbus.h
