--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=ArduinoModbus
 version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=
-paragraph=
+sentence=Use Modbus equipment with your Arduino.
+paragraph=Using the RS485 shields, like the MKR 485 shield. This library depends on the RS485 library.
 category=Communication
 url=http://www.arduino.cc/en/Reference/ArduinoModbus
 architectures=*
