--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Use Modbus equipment with your Arduino.
-paragraph=Using the RS485 shields, like the MKR 485 shield. This library depends on the RS485 library.
+paragraph=Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 category=Communication
 url=http://www.arduino.cc/en/Reference/ArduinoModbus
 architectures=*
