--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=Arduino <info@arduino.cc>
 sentence=Use Modbus equipment with your Arduino.
 paragraph=Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 category=Communication
-url=http://www.arduino.cc/en/Reference/ArduinoModbus
+url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
 architectures=*
 includes=ArduinoModbus.h
