--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ before_install:
 
 install:
   - if [ -z "$TASK" ]; then pip install --upgrade platformio; fi
+  - if [ -z "$TASK" ]; then platformio lib install "ArduinoRS485"; fi
   - if [ "$TASK" = "codespell" ]; then pip install --upgrade git+https://github.com/codespell-project/codespell.git; fi
 
 script:
