--- a/library.properties
+++ b/library.properties
@@ -8,3 +8,4 @@ category=Communication
 url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
 architectures=*
 includes=ArduinoModbus.h
+depends=ArduinoRS485
