Report changes in memory usage that would result from merging a PR
On creation or commit to a pull request, a report of the resulting change in memory usage of the examples will be
commented to the PR thread.

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      SKETCHES_REPORTS_PATH: sketches-reports
       # Libraries to install for all boards
       UNIVERSAL_LIBRARIES: |
         # Install the ArduinoModbus library from the local path
@@ -78,3 +79,11 @@ jobs:
           sketch-paths: |
             ${{ env.UNIVERSAL_SKETCH_PATHS }}
             ${{ matrix.nina-sketch-paths }}
+          enable-deltas-report: true
+          sketches-report-path: ${{ env.SKETCHES_REPORTS_PATH }}
+
+      - name: Save memory usage change report as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.SKETCHES_REPORTS_PATH }}
+          path: ${{ env.SKETCHES_REPORTS_PATH }}
