Configure workflow artifact upload step to fail if sketches report file not found
This event would indicate that the workflow was misconfigured. So it's a valuable notification.

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -110,5 +110,6 @@ jobs:
       - name: Save memory usage change report as artifact
         uses: actions/upload-artifact@v2
         with:
+          if-no-files-found: error
           name: ${{ env.SKETCHES_REPORTS_PATH }}
           path: ${{ env.SKETCHES_REPORTS_PATH }}
