--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.6
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Use Modbus equipment with your Arduino.
-paragraph=Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
+paragraph=Using TCP or RS485 shields, like the MKR 485 Shield and ESP32/ESP8266. This library depends on the ArduinoRS485 library.
 category=Communication
 url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
 architectures=*
