--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
 architectures=*
 includes=ArduinoModbus.h
-depends=ArduinoRS485
+depends=https://github.com/mostafahk/ArduinoRS485
