--- a/library.properties
+++ b/library.properties
@@ -6,6 +6,6 @@ sentence=Use Modbus equipment with your Arduino.
 paragraph=Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 category=Communication
 url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
-architectures=*
+architectures=avr,megaavr,samd,mbed_nano,mbed_portenta
 includes=ArduinoModbus.h
 depends=ArduinoRS485
