--- a/library.properties
+++ b/library.properties
@@ -3,9 +3,9 @@ version=1.0.9
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Use Modbus equipment with your Arduino.
-paragraph=Using TCP or RS485 shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
+paragraph=Using TCP, RS485 or T1S shields, like the MKR 485 Shield. This library depends on the ArduinoRS485 library.
 category=Communication
 url=https://www.arduino.cc/en/ArduinoModbus/ArduinoModbus
-architectures=megaavr,samd,mbed_nano,mbed_portenta,mbed_opta
+architectures=megaavr,samd,mbed_nano,mbed_portenta,mbed_opta,renesas_uno
 includes=ArduinoModbus.h
 depends=ArduinoRS485
